fixed navbar spacing

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 
 /* Header */
 .header_area .main-menu .navbar .navbar-brand {
-    padding: 0 0rem 0 2rem;
+    padding: 0 0rem 0 1rem;
     font-family: "Questrial", sans-serif;
     font-size: 2rem;
     color: #4EABCC;
